# Generated by Django 5.0.14 on 2026-08-30 17:37

import django.core.validators
import uuid
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='BookingAuditLog',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('payment_intent_id', models.CharField(blank=True, db_index=True, default='', max_length=255, verbose_name='Stripe Payment Intent ID')),
                ('action', models.CharField(choices=[('refund_requested', '返金リクエスト'), ('refund_succeeded', '返金完了'), ('refund_pending', '返金処理中'), ('refund_failed', '返金失敗'), ('refund_canceled', '返金取消'), ('booking_cancelled', '予約キャンセル'), ('reconciled', '整合性同期'), ('transfer_created', '事業者への送金'), ('auto_assigned', '自動割当による担当割当')], max_length=40, verbose_name='操作')),
                ('source', models.CharField(choices=[('owner_api', '事業者API'), ('customer_api', '顧客API'), ('webhook', 'Stripe Webhook'), ('dashboard', 'Stripe ダッシュボード（手動）'), ('system', 'システム')], max_length=20, verbose_name='発生経路')),
                ('previous_delivery_status', models.CharField(blank=True, choices=[('before_pickup', '集荷前'), ('picked_up', '集荷済'), ('delivered', '配達済'), ('cancelled', 'キャンセル')], default='', max_length=20, verbose_name='変更前の配達状況')),
                ('new_delivery_status', models.CharField(blank=True, choices=[('before_pickup', '集荷前'), ('picked_up', '集荷済'), ('delivered', '配達済'), ('cancelled', 'キャンセル')], default='', max_length=20, verbose_name='変更後の配達状況')),
                ('previous_refund_status', models.CharField(blank=True, choices=[('none', '返金なし'), ('pending', '返金処理中'), ('succeeded', '返金完了'), ('failed', '返金失敗'), ('canceled', '返金取消')], default='', max_length=20, verbose_name='変更前の返金状況')),
                ('new_refund_status', models.CharField(blank=True, choices=[('none', '返金なし'), ('pending', '返金処理中'), ('succeeded', '返金完了'), ('failed', '返金失敗'), ('canceled', '返金取消')], default='', max_length=20, verbose_name='変更後の返金状況')),
                ('stripe_event_id', models.CharField(blank=True, default='', max_length=255, verbose_name='Stripe Event ID')),
                ('stripe_refund_id', models.CharField(blank=True, default='', max_length=255, verbose_name='Stripe Refund ID')),
                ('stripe_charge_id', models.CharField(blank=True, default='', max_length=255, verbose_name='Stripe Charge ID')),
                ('amount', models.PositiveIntegerField(default=0, verbose_name='金額')),
                ('message', models.TextField(blank=True, default='', verbose_name='メモ')),
                ('metadata', models.JSONField(blank=True, default=dict, verbose_name='付随情報')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='記録日時')),
            ],
            options={
                'verbose_name': '予約監査ログ',
                'verbose_name_plural': '予約監査ログ',
                'db_table': 'booking_audit_logs',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='ChargeDispute',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('dispute_id', models.CharField(max_length=255, unique=True, verbose_name='Stripe 異議申立て ID')),
                ('charge_id', models.CharField(blank=True, default='', max_length=255, verbose_name='Stripe Charge ID')),
                ('payment_intent_id', models.CharField(blank=True, db_index=True, default='', max_length=255, verbose_name='Stripe Payment Intent ID')),
                ('amount', models.PositiveIntegerField(default=0, verbose_name='異議申立て金額')),
                ('currency', models.CharField(blank=True, default='', max_length=10, verbose_name='通貨')),
                ('reason', models.CharField(blank=True, default='', max_length=100, verbose_name='理由')),
                ('status', models.CharField(blank=True, default='', max_length=50, verbose_name='ステータス')),
                ('is_charge_refundable', models.BooleanField(default=False, verbose_name='チャージ返金可否')),
                ('evidence_due_by', models.DateTimeField(blank=True, null=True, verbose_name='証拠提出期限日時')),
                ('opened_at', models.DateTimeField(blank=True, null=True, verbose_name='異議申立て発生日時')),
                ('closed_at', models.DateTimeField(blank=True, null=True, verbose_name='クローズ日時')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='作成日時')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='更新日時')),
            ],
            options={
                'verbose_name': 'チャージバック（異議申立て）',
                'verbose_name_plural': 'チャージバック（異議申立て）',
                'db_table': 'charge_disputes',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='LuggageBooking',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False, verbose_name='ID')),
                ('booking_number', models.CharField(blank=True, max_length=20, unique=True, verbose_name='予約番号')),
                ('delivery_status', models.CharField(choices=[('before_pickup', '集荷前'), ('picked_up', '集荷済'), ('delivered', '配達済'), ('cancelled', 'キャンセル')], default='before_pickup', max_length=20, verbose_name='配達状況')),
                ('delivery_manually_assigned', models.BooleanField(default=False, help_text='人が手動で配達担当を付けた場合に True。自動割当では False', verbose_name='配達の手動割当')),
                ('pickup_manually_assigned', models.BooleanField(default=False, help_text='人が手動で集荷担当を付けた場合に True。自動割当では False', verbose_name='集荷の手動割当')),
                ('pickup_location_name', models.CharField(max_length=200, verbose_name='集荷場所の名称')),
                ('pickup_location_address', models.TextField(verbose_name='集荷場所の住所')),
                ('pickup_location_name_ja', models.CharField(blank=True, default='', help_text='非日本語で予約された場合の日本語表記（事業者の予約一覧用）', max_length=200, verbose_name='集荷場所の名称（日本語）')),
                ('pickup_location_address_ja', models.TextField(blank=True, default='', help_text='非日本語で予約された場合の日本語表記（事業者の予約一覧用）', verbose_name='集荷場所の住所（日本語）')),
                ('pickup_place_id', models.CharField(blank=True, default='', max_length=255, verbose_name='集荷場所の Place ID')),
                ('pickup_latitude', models.DecimalField(blank=True, decimal_places=6, max_digits=9, null=True, validators=[django.core.validators.MinValueValidator(-90), django.core.validators.MaxValueValidator(90)], verbose_name='集荷場所の緯度')),
                ('pickup_longitude', models.DecimalField(blank=True, decimal_places=6, max_digits=9, null=True, validators=[django.core.validators.MinValueValidator(-180), django.core.validators.MaxValueValidator(180)], verbose_name='集荷場所の経度')),
                ('pickup_postal_code', models.CharField(blank=True, default='', max_length=20, verbose_name='集荷場所の郵便番号')),
                ('pickup_geocode_status', models.CharField(choices=[('pending', '未処理'), ('verified', '確認済み'), ('approximate', '概算'), ('failed', '失敗')], db_index=True, default='pending', max_length=20, verbose_name='集荷場所のジオコード状態')),
                ('pickup_date', models.DateField(verbose_name='集荷日')),
                ('delivery_location_name', models.CharField(max_length=200, verbose_name='配達場所の名称')),
                ('delivery_location_address', models.TextField(verbose_name='配達場所の住所')),
                ('delivery_location_name_ja', models.CharField(blank=True, default='', help_text='非日本語で予約された場合の日本語表記（事業者の予約一覧用）', max_length=200, verbose_name='配達場所の名称（日本語）')),
                ('delivery_location_address_ja', models.TextField(blank=True, default='', help_text='非日本語で予約された場合の日本語表記（事業者の予約一覧用）', verbose_name='配達場所の住所（日本語）')),
                ('delivery_place_id', models.CharField(blank=True, default='', max_length=255, verbose_name='配達場所の Place ID')),
                ('delivery_latitude', models.DecimalField(blank=True, decimal_places=6, max_digits=9, null=True, validators=[django.core.validators.MinValueValidator(-90), django.core.validators.MaxValueValidator(90)], verbose_name='配達場所の緯度')),
                ('delivery_longitude', models.DecimalField(blank=True, decimal_places=6, max_digits=9, null=True, validators=[django.core.validators.MinValueValidator(-180), django.core.validators.MaxValueValidator(180)], verbose_name='配達場所の経度')),
                ('delivery_postal_code', models.CharField(blank=True, default='', max_length=20, verbose_name='配達場所の郵便番号')),
                ('delivery_geocode_status', models.CharField(choices=[('pending', '未処理'), ('verified', '確認済み'), ('approximate', '概算'), ('failed', '失敗')], db_index=True, default='pending', max_length=20, verbose_name='配達場所のジオコード状態')),
                ('delivery_date', models.DateField(verbose_name='配達日')),
                ('notes', models.TextField(blank=True, verbose_name='備考')),
                ('luggage_items', models.JSONField(default=dict, verbose_name='荷物情報')),
                ('total_amount', models.PositiveIntegerField(default=0, verbose_name='合計金額')),
                ('customer_name', models.CharField(max_length=200, verbose_name='顧客名')),
                ('customer_email', models.EmailField(max_length=254, verbose_name='メールアドレス')),
                ('customer_phone_number', models.CharField(max_length=16, verbose_name='電話番号')),
                ('customer_nationality', models.CharField(max_length=3, verbose_name='国籍')),
                ('guest_name', models.CharField(max_length=200, verbose_name='宿泊予約者名')),
                ('customer_language', models.CharField(choices=[('ja', '日本語'), ('en', '英語'), ('zh-Hans', '中国語（簡体字）'), ('zh-Hant', '中国語（繁体字）')], default='ja', max_length=10, verbose_name='顧客の表示言語')),
                ('payment_intent_id', models.CharField(max_length=255, verbose_name='Stripe Payment Intent ID')),
                ('refund_status', models.CharField(choices=[('none', '返金なし'), ('pending', '返金処理中'), ('succeeded', '返金完了'), ('failed', '返金失敗'), ('canceled', '返金取消')], db_index=True, default='none', max_length=20, verbose_name='返金状況')),
                ('stripe_refund_id', models.CharField(blank=True, default='', max_length=255, verbose_name='Stripe Refund ID')),
                ('stripe_charge_id', models.CharField(blank=True, default='', max_length=255, verbose_name='Stripe Charge ID')),
                ('refunded_amount', models.PositiveIntegerField(default=0, verbose_name='返金済み金額')),
                ('refunded_at', models.DateTimeField(blank=True, null=True, verbose_name='返金完了日時')),
                ('refund_reconciled_at', models.DateTimeField(blank=True, null=True, verbose_name='返金整合性チェック日時')),
                ('picked_up_at', models.DateTimeField(blank=True, null=True, verbose_name='集荷完了日時')),
                ('facility_fee', models.PositiveIntegerField(blank=True, null=True, verbose_name='施設側の手数料（円）')),
                ('transport_cost', models.PositiveIntegerField(blank=True, null=True, verbose_name='高速代などの交通費（円）')),
                ('delivery_signature', models.TextField(blank=True, default='', verbose_name='配達完了時の手書きサイン')),
                ('delivered_at', models.DateTimeField(blank=True, null=True, verbose_name='配達完了日時')),
                ('stripe_transfer_id', models.CharField(blank=True, default='', max_length=255, verbose_name='Stripe Transfer ID')),
                ('transferred_at', models.DateTimeField(blank=True, null=True, verbose_name='事業者への送金日時')),
                ('transferred_gross_amount', models.PositiveIntegerField(blank=True, null=True, verbose_name='送金時の返金控除後売上額')),
                ('transferred_platform_fee', models.PositiveIntegerField(blank=True, null=True, verbose_name='送金時のプラットフォーム手数料')),
                ('funds_available_on', models.DateTimeField(blank=True, null=True, verbose_name='Stripe資金の入金可能日時')),
                ('issuer_name', models.CharField(blank=True, default='', max_length=255, verbose_name='発行者名（スナップショット）')),
                ('issuer_name_en', models.CharField(blank=True, default='', max_length=255, verbose_name='発行者名英語表記（スナップショット）')),
                ('issuer_address', models.TextField(blank=True, default='', verbose_name='発行者住所（スナップショット）')),
                ('issuer_email', models.CharField(blank=True, default='', max_length=254, verbose_name='発行者メール（スナップショット）')),
                ('issuer_phone', models.CharField(blank=True, default='', max_length=50, verbose_name='発行者電話番号（スナップショット）')),
                ('issuer_invoice_number', models.CharField(blank=True, default='', max_length=14, verbose_name='適格請求書発行事業者登録番号（スナップショット）')),
                ('issuer_snapshot_at', models.DateTimeField(blank=True, null=True, verbose_name='発行者情報スナップショット保存日時')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='予約日時')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='更新日時')),
            ],
            options={
                'verbose_name': '予約情報',
                'verbose_name_plural': '予約情報',
                'db_table': 'luggage_bookings',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='PendingBooking',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('payment_intent_id', models.CharField(max_length=255, unique=True, verbose_name='Stripe Payment Intent ID')),
                ('payload', models.JSONField(default=dict, verbose_name='予約作成用データ')),
                ('total_amount', models.PositiveIntegerField(default=0, verbose_name='合計金額')),
                ('consumed_at', models.DateTimeField(blank=True, null=True, verbose_name='予約作成完了日時')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='作成日時')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='更新日時')),
            ],
            options={
                'verbose_name': '保留中の予約（フォールバック用）',
                'verbose_name_plural': '保留中の予約（フォールバック用）',
                'db_table': 'pending_bookings',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='StripeWebhookEvent',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('event_id', models.CharField(max_length=255, unique=True, verbose_name='Stripe Event ID')),
                ('event_type', models.CharField(blank=True, default='', max_length=100, verbose_name='イベント種別')),
                ('received_at', models.DateTimeField(auto_now_add=True, verbose_name='受信日時')),
                ('processed_at', models.DateTimeField(blank=True, null=True, verbose_name='処理完了日時')),
            ],
            options={
                'verbose_name': 'Stripe Webhook イベント',
                'verbose_name_plural': 'Stripe Webhook イベント',
                'db_table': 'stripe_webhook_events',
                'ordering': ['-received_at'],
            },
        ),
    ]
